Fix codecopy button on mobile

--- a/src/css/modules/markdown/markdown-layout.css
+++ b/src/css/modules/markdown/markdown-layout.css
@@ -44,7 +44,8 @@ main {
 
 .copy-code {
     display: inline-block;
-    padding: 2px 0 0 0;
+    aspect-ratio: 1;
+    padding: 0;
     border-radius: 3px;
     border: var(--grayer);
     background-color: var(--gray);
